--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,13 +13,13 @@
     --secondary-text-color: #577592;
     --primary-accent-color: #2294ed;
     --primary-accent-dark-color: #1d69a3;
-    /* --left-right-padding: 20px; */
+    --left-right-padding: 20px;
 }
 
 
 body{
     font-family: 'Poppins', sans-serif;
-    color: var(--primary-text-color)
+    color: var(--primary-text-color);
 }
 
 p{
@@ -54,9 +54,14 @@ ul{
 
 /* Utility Class */
 
+.container{
+    overflow: hidden;
+}
+
 .side-margin{
-    width: 1180px;
+    max-width: 1180px;
     margin-inline: auto;
+    padding-inline: var(--left-right-padding);
 }
 
 .flex{
@@ -112,7 +117,6 @@ ul{
     background-image: url(/assets/asset\ 32.png);
     background-size: 300px;
     background-repeat: repeat;
-    
 }
 
 .top-banner-content{
@@ -131,6 +135,7 @@ ul{
     align-items: center;
     justify-content: space-between;
     margin-top: 30px;
+    padding-inline: var(--left-right-padding);
 }
 
 .logo-img-container img{
@@ -220,6 +225,7 @@ ul{
 
 .features-card-section{
     flex-wrap: wrap;
+    justify-content: center;;
     gap: 50px;
 }
 
@@ -331,6 +337,13 @@ ul{
     transition: all 0.2s ease-in;
 }
 
+.ex-card h3{
+    color: white;
+    position: relative;
+    bottom: 0px;
+    left: 0;
+}
+
 .ex-card:hover{
     box-shadow: 0px 0px 3px black;
 }
@@ -365,6 +378,7 @@ ul{
 .banner1-inner-section{
     align-items: center;
     gap: 70px;
+    padding: 40px;
 }
 
 .banner-intro, .panel-feature-section{
