--- a/src/css/help_center.css
+++ b/src/css/help_center.css
@@ -43,13 +43,13 @@
     padding: 50px;
     align-items: center;
     width: 1000px;
-    background-color: rgb(218, 237, 241);
     margin-block: 10px;
 }
 
 .question{
     font-size: 1.3rem;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    align-items: center;
     width: 100%;
     margin-block: 10px;
 }
